[290] Add product feature & plugin
Bug: 290
Change-Id: I197ddbaf488fe111177ee0faf6f954e21d6deb19
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>