@@ -357,12 +357,12 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,TP_juno,TP_build,releng,PublishStep_5,releng_feature,extension_sdk,PublishStep_8,extension_sdk_feature,all_studio_features,TP_win32-win32-x86,AntStep_12" />
+	<target name="all" depends="CleanStep_1,TP_juno,TP_build,releng,PublishStep_5,releng_feature,product,PublishStep_8,product_feature,extension_sdk,PublishStep_11,extension_sdk_feature,AntStep_13,all_studio_features,TP_win32-win32-x86,AntStep_16" />
 	<target name="TP_juno" depends="TP_juno_build_studio_platform" />
 	<target name="TP_juno_build_studio_platform" depends="TP_juno_build_studio_platform_setup_platform,TP_juno_build_studio_platform_install_query_legacy_features,TP_juno_build_studio_platform_install_kitalpha_features,TP_juno_build_studio_platform_install_capella_features,TP_juno_build_studio_platform_install_capella_egf_features" />
 	<target name="TP_juno_build_studio_platform_setup_platform" depends="TP_juno_build_studio_platform_setup_platform_TP_juno,TP_juno_build_studio_platform_setup_platform_install_cots_features,TP_juno_build_studio_platform_setup_platform_install_diffmerge,TP_juno_build_studio_platform_setup_platform_install_ecoretools2" />
-	<target name="TP_build" depends="TP_build_TP_build,TP_build_install_egf_TP_build" />
-	<target name="TP_win32-win32-x86" depends="TP_win32-win32-x86_build_studio_platform,TP_win32-win32-x86_install_studio,TP_win32-win32-x86_zip_juno_results" />
+	<target name="TP_build" depends="TP_build_TP_build,TP_build_install_egf_TP_build,TP_build_install_kitalpha_releng_TP_build" />
+	<target name="TP_win32-win32-x86" depends="TP_win32-win32-x86_build_studio_platform,TP_win32-win32-x86_install_studio,TP_win32-win32-x86_EgfStep_3,TP_win32-win32-x86_zip_juno_results" />
 	<target name="TP_win32-win32-x86_build_studio_platform" depends="TP_win32-win32-x86_build_studio_platform_setup_platform,TP_win32-win32-x86_build_studio_platform_install_query_legacy_features,TP_win32-win32-x86_build_studio_platform_install_kitalpha_features,TP_win32-win32-x86_build_studio_platform_install_capella_features,TP_win32-win32-x86_build_studio_platform_install_capella_egf_features" />
 	<target name="TP_win32-win32-x86_build_studio_platform_setup_platform" depends="TP_win32-win32-x86_build_studio_platform_setup_platform_TP_win32-win32-x86,TP_win32-win32-x86_build_studio_platform_setup_platform_install_cots_features,TP_win32-win32-x86_build_studio_platform_setup_platform_install_diffmerge,TP_win32-win32-x86_build_studio_platform_setup_platform_install_ecoretools2" />
 	<target name="CleanStep_1" >
@@ -392,6 +392,43 @@ This file was generated by Eclipse EGF
             <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
             <cmdargs>
                 <arg value="${relengDir}/buckminster_releng/build.mspec" />
+            </cmdargs>
+        </buckminster>
+
+
+        <echo message="Invoking all eclipse builders on workspace ${workspace}" />
+        <buckminster command="build" >
+            <cmdargs>
+                <arg value="--clean" />
+                <arg value="--thorough" />
+            </cmdargs>
+		</buckminster>
+    </target>
+
+    <target name="product" depends="init,install.buckminster">
+        <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
+
+		<echo message="install JRE ${env.JAVA_HOME}" />
+    	<buckminster command="installJRE">
+            <cmdargs>
+                <arg value="--location" />
+                <arg value="${env.JAVA_HOME}" />
+            </cmdargs>
+        </buckminster>
+
+
+		<echo message="import target platform" />
+        <buckminster command="importtargetdefinition">
+            <cmdargs>
+                <arg value="--active" />
+                <arg value="${relengDir}/buckminster_product/build.target" />
+            </cmdargs>
+        </buckminster>
+		<echo message="provision : import projects in workspace" />
+        <buckminster command="import">
+            <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
+            <cmdargs>
+                <arg value="${relengDir}/buckminster_product/build.mspec" />
             </cmdargs>
         </buckminster>
 
@@ -482,6 +519,35 @@ This file was generated by Eclipse EGF
 				<arg value="-Dcbi.include.source=true"/>				
 			</globargs>
 			<cmdargs>
+				<arg value="org.polarsys.capella.studio.product.feature:eclipse.feature#site.p2" />
+			</cmdargs>
+		</buckminster>
+
+		<echo message="Publish site"/>
+		<mkdir dir="${publish}/org.polarsys.capella.studio.product.feature/site.p2/"/>
+		<copy todir="${publish}/org.polarsys.capella.studio.product.feature/site.p2/">
+			<fileset dir="${result}/output">
+				<include name="org.polarsys.capella.studio.product.feature*/site.p2/*"/>
+				<include name="org.polarsys.capella.studio.product.feature*/site.p2/**"/>
+			</fileset>
+			<filtermapper>
+				<replaceregex pattern=".*site\.p2" replace="" />
+			</filtermapper>
+		</copy>
+		
+	</target>
+
+	<target name="PublishStep_11" depends="init,install.buckminster" >
+
+		
+		<echo message="Generate Site"/>
+		<buckminster command="perform">
+			<globargs>
+				<arg value="-Dsite.include.top=true"/>
+				<arg value="-Dsite.signing=false"/>				
+				<arg value="-Dcbi.include.source=true"/>				
+			</globargs>
+			<cmdargs>
 				<arg value="org.polarsys.capella.extension.sdk.feature:eclipse.feature#site.p2" />
 			</cmdargs>
 		</buckminster>
@@ -501,16 +567,40 @@ This file was generated by Eclipse EGF
 	</target>
 
 
-	<target name="AntStep_12">
+	<target name="AntStep_13">
+		<antcall target="move_egf_to_tools2"/>
+	</target>
+
+<target name="move_egf_to_tools2">
+	<delete dir="${tools}/egf"/>
+	<move file="${publish}/TP_build" tofile="${tools}/egf" />
+</target>
+
+
+	<target name="AntStep_16">
 		<antcall target="cleanUp"/>
 	</target>
 
 <target name="cleanUp">
     <delete dir="${publish}/org.polarsys.capella.extension.sdk.feature" verbose="true"/>
     <delete dir="${publish}/org.polarsys.capella.studio.releng.feature" verbose="true"/>
+    <delete dir="${publish}/org.polarsys.capella.studio.product.feature"/>
 </target>
 
 
+	<target name="TP_win32-win32-x86_EgfStep_3" depends="init,install.egf">
+		<egf>
+            <globargs>
+				<jvmarg value="-DplatformPath=${publish}/TP_win32-win32-x86" />
+				<jvmarg value="-Dversion=${studio_version}" />
+				<jvmarg value="-Dproduct=org.polarsys.capella.studio.product" />
+				<jvmarg value="-Dapplication=org.polarsys.capella.studio.application" />            
+			</globargs>
+			<activities>
+				<arg value="platform:/plugin/org.polarsys.kitalpha.releng/egf/customPlatform.fcore#_iQtBQK1QEeCY7YPdntiIaQ"/>
+			</activities>
+		</egf>
+	</target>
 	<target name="all_studio_features" depends="init,install.egf" >
 		<anteclipse target="all_studio_features_dropins" />
 		<anteclipse target="all_studio_features_sitep2" />
@@ -526,6 +616,7 @@ This file was generated by Eclipse EGF
 			<source>
 				<repository location="file:/${publish}/org.polarsys.capella.studio.releng.feature/site.p2" />
 				<repository location="file:/${publish}/org.polarsys.capella.extension.sdk.feature/site.p2" />
+				<repository location="file:/${publish}/org.polarsys.capella.studio.product.feature/site.p2" />
 			</source>
 		</p2.mirror>
 	</target>
@@ -1083,6 +1174,36 @@ This file was generated by Eclipse EGF
             </args>
         </eclipse.launch>
 	</target>	
+	<target name="TP_build_install_kitalpha_releng_TP_build" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_build" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${kitalpha.repo.url}" />
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.kitalpha.releng.feature.feature.group" />                
+
+
+
+            </args>
+        </eclipse.launch>
+	</target>	
 	<target name="releng_feature" depends="init,install.director" >
         <eclipse.launch app="director">
             <args>
@@ -1109,6 +1230,36 @@ This file was generated by Eclipse EGF
 
                 <arg value="-i" />
                 <arg value="org.polarsys.capella.studio.releng.feature.feature.group" />
+
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="product_feature" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_juno" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.capella.studio.product.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.studio.product.feature.feature.group" />
 
             </args>
         </eclipse.launch>
@@ -1656,6 +1807,8 @@ This file was generated by Eclipse EGF
                 <arg value="file:/${publish}/org.polarsys.capella.studio.releng.feature/site.p2" />
                 <arg value="-r" />
                 <arg value="file:/${publish}/org.polarsys.capella.extension.sdk.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.capella.studio.product.feature/site.p2" />
                 
 
 
@@ -1667,6 +1820,10 @@ This file was generated by Eclipse EGF
                 <arg value="org.polarsys.capella.extension.sdk.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.polarsys.capella.extension.sdk.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.studio.product.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.studio.product.source.feature.feature.group" />
 
             </args>
         </eclipse.launch>
